--- a/src/components/componentCss/header.css
+++ b/src/components/componentCss/header.css
@@ -1,6 +1,6 @@
 .responsive-headline{
   
-    font-size: 50px;
+    font-size: 3vw;
      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    
 }
