--- a/src/components/componentCss/portfolio.css
+++ b/src/components/componentCss/portfolio.css
@@ -1,4 +1,4 @@
-.GFG {
+/* .GFG {
     background-color: white;
     border: 2px solid black;
     color: #F87171;
@@ -10,4 +10,28 @@
     cursor: pointer;
     margin-left: 45px;
     border: none;
+} */
+.myButton {
+    margin-top: 20px;
+	background-color:white;
+	border-radius:10px;
+
+	display:inline-block;
+	cursor:pointer;
+	color:#f87171;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+  margin-left: 2.25em;
+  /* margin: 2px 1em 0 auto; */
+    border: none;
 }
+.myButton:hover {
+	background-color:grey;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+   
