--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -352,6 +352,11 @@ ul#nav li.current a { color: #F06000; }
    -moz-animation: reactjs 2s ease;
    -webkit-animation: reactjs 2s ease;
 }
+.javascript {
+   width: 80%;
+   -moz-animation: reactjs 2s ease;
+   -webkit-animation: reactjs 2s ease;
+}
 .firebase {
    width: 75%;
    -moz-animation: firebase 2s ease;
@@ -385,6 +390,10 @@ ul#nav li.current a { color: #F06000; }
    0%   { width: 0px;  }
    100% { width: 80%;  }
  }
+ @-moz-keyframes javascript {
+   0%   { width: 0px;  }
+   100% { width: 80%;  }
+ }
  @-moz-keyframes firebase {
    0%   { width: 0px;  }
    100% { width: 75%;  }
@@ -413,6 +422,10 @@ ul#nav li.current a { color: #F06000; }
 }
 
 @-webkit-keyframes reactjs {
+   0%   { width: 0px;  }
+   100% { width: 80%;  }
+ }
+ @-webkit-keyframes javascript {
    0%   { width: 0px;  }
    100% { width: 80%;  }
  }
